# MC-SPS

./: .gitignore  README.md  pyproject.toml  setup.py
examples/example_Cs2SnI6/: main_Cs2SnI6.py
examples/example_CuZn/: main_CuZn.py
examples/example_GaAs/: README  main_absolute_zero.py  main_annealing.py  plot_example_GaAs.py  plot_swaps_absolute_zero.py  plot_swaps_annealed.py
examples/example_Rb8Ga27Sb19/: README  Rb32Si184.xyz  main_Rb8Ga27Sb19.py  plot_example_Rb8Ga27Sb19.py
src/: calculators.py  file_io.py  mcsps.py  plotting.py  utilities.py
